--- a/partials/__navbar-branco.html
+++ b/partials/__navbar-branco.html
@@ -84,16 +84,16 @@
                     <div class="main-nav__dropdown">
                         <ul>
                             <li>
-                                <a href="#">Sobre</a>
+                                <a class="color-white" href="#">Sobre</a>
                             </li>
                             <li>
-                                <a href="#">Diretoria</a>
+                                <a class="color-white" href="#">Diretoria</a>
                             </li>
                             <li>
-                                <a href="#">Estrutura</a>
+                                <a class="color-white" href="#">Estrutura</a>
                             </li>
                             <li>
-                                <a href="#">Onde atuamos</a>
+                                <a class="color-white" href="#">Onde atuamos</a>
                             </li>
                         </ul>
                     </div>
