--- a/scss/components/UI/__main-nav.scss
+++ b/scss/components/UI/__main-nav.scss
@@ -23,7 +23,7 @@
         @media screen and (max-width: $bp-XL) {
             width: 230px;
         }
-        @media screen and (max-width: $bp-LG) {
+        @media screen and (max-width: 1100px) {
             width: 200px;
         }
         @media screen and (max-width: $bp-MD) {
@@ -54,9 +54,11 @@
 
             &:not(:last-child) {
                 margin-right: 37px;
+
                 @media screen and (max-width: $bp-XL) {
-                    margin-right: 20px;
+                    margin-right: 14px;
                 }
+
                 @media screen and (max-width: $bp-LG) {
                     margin-right: 0;
                     margin-bottom: 15px;
@@ -69,9 +71,11 @@
                 color: rgba(255, 255, 255, 1) !important;
                 text-transform: uppercase;
                 @include transition();
+
                 &:hover {
                     @include scale(1.03);
                 }
+
                 @media screen and (max-width: $bp-LG) {
                     text-shadow: none;
                     font-size: 18px;
@@ -152,10 +156,10 @@
             top: 0;
             pointer-events: all;
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
+            align-items: center;
             padding: 40px 0;
+            padding-top: 90px;
             width: 100vw;
             height: 100vh;
             overflow-y: auto;
@@ -176,6 +180,14 @@
         box-shadow: 0 3px 6px rgba(0,0,0,.1);
 
         .main-nav__links {
+
+            .has-dropdown{
+                li{
+                    a{
+                        color: #fff !important;
+                    }
+                }
+            }
             li {
                a{
                 color: #707070 !important;
@@ -191,9 +203,14 @@
             img{
                 width: 240px;
 
+                @media screen and (max-width: 1100px) {
+                    width: 200px;
+                }
+
                 @media screen and (max-width: $bp-MD){
                     width: 150px;
                 }
+                
             }
         }
 
@@ -213,6 +230,11 @@
             .main-nav__dropdown {
                 opacity: 1;
                 pointer-events: all;
+
+                @media screen and (max-width: $bp-LG){
+                    max-height: 1000px;
+                    padding-top: 14px;
+                }
             }
         }
     }
@@ -226,6 +248,13 @@
         pointer-events: none;
         transition: all 0.4s;
 
+        @media screen and (max-width: $bp-LG){
+            display: block;
+            position: relative;
+            max-height: 0;
+            padding-top: 0;
+        }
+
         ul {
             position: relative;
             width: 190px;
@@ -233,6 +262,15 @@
             background-color: $color-primary;
             border-radius: 4px;
             box-shadow: 0 3px 6px rgba(0,0,0,.25);
+
+            @media screen and (max-width: $bp-LG){
+               padding: 10px 0;
+               border-top: 1px solid #fff;
+               border-bottom: 1px solid #fff;
+               border-radius: 0;
+               background-color: transparent;
+               box-shadow: none;
+            }
 
             &:after {
                 content: '';
@@ -245,12 +283,22 @@
                 border-left: 12px solid transparent;
                 border-right: 12px solid transparent;
                 border-bottom: 12px solid $color-primary;
+
+                @media screen and (max-width: $bp-LG){
+                    display: none;
+                }
             }
         }
 
         li {
             font-size: 14px;
             
+            a{
+                @media screen and (max-width: $bp-LG){
+                    font-size: 14px;
+                }
+            }
+
             &:not(:last-child){
                 margin-bottom: 12px;
             }
