--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,8 @@ button:focus {
   letter-spacing: 0.2px;
   width: 100%;
   z-index: 9;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 992px) {
@@ -462,6 +464,12 @@ button:focus {
 @media screen and (max-width: 992px) {
   .main-header__right {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .main-header__right a, .main-header__right small {
+    font-size: 11px;
   }
 }
 
@@ -574,7 +582,7 @@ button:focus {
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1100px) {
   .main-nav__brand {
     width: 200px;
   }
@@ -617,7 +625,7 @@ button:focus {
 
 @media screen and (max-width: 1200px) {
   .main-nav__links li:not(:last-child) {
-    margin-right: 20px;
+    margin-right: 14px;
   }
 }
 
@@ -735,10 +743,10 @@ button:focus {
     top: 0;
     pointer-events: all;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     padding: 40px 0;
+    padding-top: 90px;
     width: 100vw;
     height: 100vh;
     overflow-y: auto;
@@ -759,6 +767,10 @@ button:focus {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
+.main-nav.branco .main-nav__links .has-dropdown li a {
+  color: #fff !important;
+}
+
 .main-nav.branco .main-nav__links li a {
   color: #707070 !important;
 }
@@ -771,6 +783,12 @@ button:focus {
 
 .main-nav.branco .main-nav__brand img {
   width: 240px;
+}
+
+@media screen and (max-width: 1100px) {
+  .main-nav.branco .main-nav__brand img {
+    width: 200px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -796,6 +814,13 @@ button:focus {
   pointer-events: all;
 }
 
+@media screen and (max-width: 992px) {
+  .main-nav .has-dropdown:hover .main-nav__dropdown {
+    max-height: 1000px;
+    padding-top: 14px;
+  }
+}
+
 .main-nav__dropdown {
   position: absolute;
   left: 50%;
@@ -806,6 +831,15 @@ button:focus {
   transition: all 0.4s;
 }
 
+@media screen and (max-width: 992px) {
+  .main-nav__dropdown {
+    display: block;
+    position: relative;
+    max-height: 0;
+    padding-top: 0;
+  }
+}
+
 .main-nav__dropdown ul {
   position: relative;
   width: 190px;
@@ -813,6 +847,17 @@ button:focus {
   background-color: #7DA04C;
   border-radius: 4px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+@media screen and (max-width: 992px) {
+  .main-nav__dropdown ul {
+    padding: 10px 0;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
+  }
 }
 
 .main-nav__dropdown ul:after {
@@ -828,8 +873,20 @@ button:focus {
   border-bottom: 12px solid #7DA04C;
 }
 
+@media screen and (max-width: 992px) {
+  .main-nav__dropdown ul:after {
+    display: none;
+  }
+}
+
 .main-nav__dropdown li {
   font-size: 14px;
+}
+
+@media screen and (max-width: 992px) {
+  .main-nav__dropdown li a {
+    font-size: 14px;
+  }
 }
 
 .main-nav__dropdown li:not(:last-child) {
@@ -1681,7 +1738,7 @@ label.error {
   font-weight: 400;
   font-size: 21px;
   max-width: 530px;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 
 @media screen and (max-width: 768px) {
@@ -2524,7 +2581,7 @@ label.error {
 
 .associacao {
   background-image: url(../images/backgrounds/bg-interna2.png);
-  padding: 180px 0 130px;
+  padding: 180px 0 90px;
 }
 
 @media screen and (max-width: 992px) {
@@ -2912,7 +2969,7 @@ label.error {
 }
 
 .pg-evento {
-  padding: 180px 0 30px;
+  padding: 180px 0 70px;
   background-image: url(../images/backgrounds/bg-interna.png);
 }
 
@@ -2937,7 +2994,7 @@ label.error {
   background-color: #707070;
   border-radius: 7px;
   text-transform: uppercase;
-  padding: 4.6px 10px;
+  padding: 4.6px 14px;
 }
 
 @media screen and (max-width: 768px) {
@@ -3094,12 +3151,13 @@ label.error {
   text-align: center;
   font-weight: 400;
   line-height: 1.4;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 @media screen and (max-width: 768px) {
   .conheca__header .inner-desc {
     font-size: 19px;
+    margin-bottom: 40px;
   }
 }
 
@@ -3261,7 +3319,7 @@ label.error {
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 130px;
   margin-bottom: 30px;
 }
 
