--- a/scss/components/UI/__main-header.scss
+++ b/scss/components/UI/__main-header.scss
@@ -5,6 +5,8 @@
     letter-spacing: 0.2px;
     width: 100%;
     z-index: 9;
+    max-width: 100vw;
+    overflow-x: hidden;
 
     @media screen and (max-width: $bp-LG) {
         font-size: 13px;
@@ -32,6 +34,12 @@
     &__right {
         @media screen and (max-width: $bp-LG) {
             display: none;
+        }
+
+        a, small{
+            @media screen and (max-width: 1100px){
+                font-size: 11px;
+            }
         }
     }
 
