--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -1,5 +1,6 @@
 .form-control {
     width: 100%;
+    -webkit-appearance:none;
     font-size: 14px;
     background-color: #fff;
     border: none;
