--- a/css/style.css
+++ b/css/style.css
@@ -664,6 +664,7 @@ button:focus {
 }
 
 .main-nav__toggler {
+  position: relative;
   display: none;
   background: none;
   border: none;
@@ -678,6 +679,7 @@ button:focus {
 }
 
 .main-nav__toggler div {
+  display: block;
   width: 100%;
   height: 1px;
   background-color: #fff;
@@ -895,6 +897,7 @@ button:focus {
 
 .form-control {
   width: 100%;
+  -webkit-appearance: none;
   font-size: 14px;
   background-color: #fff;
   border: none;
