--- a/scss/components/UI/__main-nav.scss
+++ b/scss/components/UI/__main-nav.scss
@@ -86,16 +86,19 @@
     }
 
     &__toggler {
+        position: relative;
         display: none;
         background: none;
         border: none;
         width: 44px;
         margin-right: -3px;
+
         @media screen and (max-width: $bp-LG) {
             display: block;
         }
 
         div {
+            display: block;
             width: 100%;
             height: 1px;
             background-color: #fff;
